Open EXR multiview image sequences crash Blender 2.75a and 2.76rc #46223

Closed
opened 2015-09-23 11:32:45 +02:00 by Hrobjartur Thorsteinsson · 8 comments

Demonstration files
open_exr_multiview_sequence.zip

System Information
Ubuntu Linux 14.04
NVIDIA GTX 660ti

Blender Version
Broken: 2.75a c27589e and 2.76-rc1 c586e30

Short description of error
Blender 2.75a writes multiview Open EXR files in sequences which is a great feature.
However, when importing the Open EXR image sequence into the compositor, blender throws
and error "error, multi is a normal image", and soon after it core dumps.

At first the first frame image may show, however it core dumps or halts immediately after
changing frame on the time-line.

Core dump:
"error, multi is normal image
Writing: /tmp/open_exr_multiview_sequence.crash.txt
Segmentation fault (core dumped)"

Exact steps for others to reproduce the error
Attached blend file and 3 OpenEXR images with Left and Right view demonstrate this bug.
To reproduce the error, 1. open up compositor 2. add image node 3. open up the open exr image sequence 4. change frame on timeline,
blender should then immediately halt or core dump.

**Demonstration files** [open_exr_multiview_sequence.zip](https://archive.blender.org/developer/F237744/open_exr_multiview_sequence.zip) **System Information** Ubuntu Linux 14.04 NVIDIA GTX 660ti **Blender Version** Broken: 2.75a c27589e and 2.76-rc1 c586e30 **Short description of error** Blender 2.75a writes multiview Open EXR files in sequences which is a great feature. However, when importing the Open EXR image sequence into the compositor, blender throws and error "error, multi is a normal image", and soon after it core dumps. At first the first frame image may show, however it core dumps or halts immediately after changing frame on the time-line. Core dump: "error, multi is normal image Writing: /tmp/open_exr_multiview_sequence.crash.txt Segmentation fault (core dumped)" **Exact steps for others to reproduce the error** Attached blend file and 3 OpenEXR images with Left and Right view demonstrate this bug. To reproduce the error, 1. open up compositor 2. add image node 3. open up the open exr image sequence 4. change frame on timeline, blender should then immediately halt or core dump.

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by Hrobjartur Thorsteinsson 2015-09-23 11:32:45 +02:00

Added subscriber: @Hrobjartur

Added subscriber: @Hrobjartur

splitLeftRightEXR.py
Here is a temporary workaround for those with this issue.

I wrote a small python script two split a left-right multiView file into two separate files using the OpenEXR python binding found here http://www.excamera.com/sphinx/articles-openexr.html
It needs a relatively new libopenexr so that it doesn't complain about multiViews, possibly just download the
latest v.2.2 from openexr.com

On Linux just run the python script on your L-R multiview OpenEXR files, $ ./splitLeftRightEXR.py
it will then output two new files with L_ and R_ prefix.
For a large file sequence do $ for x in myfilesequence*.exr; do ./splitLeftRightEXR.py $x; done

[splitLeftRightEXR.py](https://archive.blender.org/developer/F238465/splitLeftRightEXR.py) Here is a temporary workaround for those with this issue. I wrote a small python script two split a left-right multiView file into two separate files using the OpenEXR python binding found here http://www.excamera.com/sphinx/articles-openexr.html It needs a relatively new libopenexr so that it doesn't complain about multiViews, possibly just download the latest v.2.2 from openexr.com On Linux just run the python script on your L-R multiview OpenEXR files, $ ./splitLeftRightEXR.py <myfile> it will then output two new files with L_ and R_ prefix. For a large file sequence do $ for x in myfilesequence*.exr; do ./splitLeftRightEXR.py $x; done

Added subscriber: @Sergey

Added subscriber: @Sergey

Can confirm the crash. Not really sure if it's directly multiview related, similar issue appeared with pre-multiview blender but those i've tried to keep resolved.

@dfelinto, it'll help if you can look if it's multiview related or not and if not feel free to re-assign to me.

Can confirm the crash. Not really sure if it's directly multiview related, similar issue appeared with pre-multiview blender but those i've tried to keep resolved. @dfelinto, it'll help if you can look if it's multiview related or not and if not feel free to re-assign to me.

I think it is multiview related. Something is wrong with the sequence logic for exr multiview files.

I think it is multiview related. Something is wrong with the sequence logic for exr multiview files.

This issue was referenced by 8191066c0b

This issue was referenced by 8191066c0b6d17936f088baa6a549ee83e7b0db0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46223
No description provided.