Fix related to T46223: memory leak when loading multilayer multiview images.

Differential Revision: https://developer.blender.org/D1549